checker/src/test/resources/optionalErrors.baseline
Source: {?'key': 'hi'}
=====>
ERROR: test_location:1:10: expected type 'optional_type(string)' but found 'string'
 | {?'key': 'hi'}
 | .........^

Source: [?'value']
=====>
ERROR: test_location:1:3: expected type 'optional_type(string)' but found 'string'
 | [?'value']
 | ..^

Source: TestAllTypes{?single_int32: 1}
=====>
ERROR: test_location:1:29: expected type 'optional_type(int)' but found 'int'
 | TestAllTypes{?single_int32: 1}
 | ............................^

Source: a.?b
declare a {
  value map(string, string)
}
=====>
ERROR: <input>:1:1: unsupported optional field selection
  | a.?b
  | ^
